src/objects/Question_Choice__c.object
<CustomObject>
    <fields>
        <fullName>CT_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Unique Id for Choice - Question Id + Points</inlineHelpText>
        <label>CT Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Option_Text__c</fullName>
        <label>Option Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Id__c</fullName>
        <formula>Questions__r.Name</formula>
        <label>Question Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <referenceTo>Questions__c</referenceTo>
        <relationshipLabel>Question Choices</relationshipLabel>
        <relationshipName>Question_Choices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Question Choice</label>
    <nameField>
        <label>Question Choices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>